<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>y_arena_cpp_pub</name>
  <version>0.1.0</version>
  <description>Example C++ publisher for Turner Lab Y-Arena rig.</description>
  <maintainer email="peter@polidoro.io">Peter Polidoro</maintainer>
  <license>BSD</license>
  <author>Peter Polidoro</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>y_arena_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
